# langchain-atguigu

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
01_helloworld/: StandardDesc.py
03_ollama/: LangChain_Ollama.py
04_prompt/invoke/: LLM_Batch.py  LLM_Invoke.py  LLM_Stream.py  LLM_aBatch.py  LLM_aInvoke.py  LLM_aStream.py
05_parser/: JsonOutputParserDemo.py  JsonOutputParser_GetFormatInstructions.py  StrOutputParserDemo.py  StructuredOutput_Pydantic.py  StructuredOutput_TypedDict.py
06_lcel/: LCEL_RunnableBranchDemo.py  LCEL_RunnableLambdaDemo.py  LCEL_RunnableParallelDemo.py  LCEL_RunnableSequenceDemo.py  LCEL_RunnableSerializableDemo.py
07_memory/: Memory_IDontKnow.py  Memory_InMemoryChatMessageHistory.py  Memory_RedisChatMessageHistory.py  Memory_RunnableWithMessageHistory.py  Memory_RunnableWithMessageHistoryV2.py
08_tools/: LLMQueryWeatherDemo.py  QueryWeatherTool.py
09_embedding/: EmbeddingStoreRedis.py  Text2Embedding_CosSimilarity.py  Text2Embedding_DashScope.py  Text2Embedding_DashScopeHello.py  Text2Embedding_DashScopePro.py  Text2Embedding_OpenAiHello.py
10_rag/: RedisVectorStore.py  RedisVectorStore_SimilaritySearch.py
11_mcp/: langchain_weather_client.py  weather_mcp_server.py  weather_stdio_server.py
