[project]
name = "langchain-new"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
