[project]
name = "langchain-new"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.23",
    "grandalf>=0.8",
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-redis>=0.2.5",
    "langchain-unstructured>=1.0.1",
    "loguru>=0.7.3",
    "python-magic-bin>=0.4.14",
    "redis==5.3.1",
    "unstructured>=0.23.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
